--- a/ocp_inventory_template_azure.yml
+++ b/ocp_inventory_template_azure.yml
@@ -18,7 +18,7 @@
       #if you set CNS="yes" you need to specify 3 infra nodes and 3 app nodes above
       CNS: "no"
       
-      OCP_SSH_USER: cloud-user
+      OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
       
       OCP_IPA: "yes"
@@ -29,29 +29,20 @@
       OCP_DEFAULT_SUBDOMAIN: cloudapps.ocpcloud.local
       OCP_MASTER_HOSTNAME: master.ocpcloud.local
       OCP_MASTER_PUBLIC_HOSTNAME: master.ocpcloud.com
-
+   
       HTTP_PROXY: "no"
       OCP_HTTP_PROXY:
       OCP_HTTPS_PROXY: 
       OCP_NO_PROXY:
 
+      AZURE: "yes"
+
       AWS: "no"
       
-      OSP: "yes"
-      OSP_AUTH_URL: "{{ lookup('env','OSP_AUTH_URL') }}"
-      OSP_USERNAME: "{{ lookup('env','OSP_USERNAME') }}"
-      OSP_PASSWORD: "{{ lookup('env','OSP_PASSWORD') }}"
-      OSP_TENANT_ID: "{{ lookup('env','OSP_TENANT_ID') }}"
-      OSP_TENANT_NAME: "{{ lookup('env','OSP_TENANT_NAME') }}"
-      OSP_REGION: "{{ lookup('env','OSP_REGION') }}"
-      OSP_DOMAIN_ID: "{{ lookup('env','OSP_DOMAIN_ID') }}"
-      OSP_DOMAIN_NAME: "{{ lookup('env','OSP_DOMAIN_NAME') }}" 
-
-      AZURE: "no" 
-        
+      OSP: "no"
+      
     tasks:
       - name: Proces inventory template file
         template:
           src: "{{ template }}"
-          dest: ./inventory-osp-{{ ansible_date_time.epoch }}
-
+          dest: ./inventory-{{ ansible_date_time.epoch }}
