--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -49,3 +49,8 @@
         template:
           src: "{{ template }}"
           dest: ./inventory-aws-{{ ansible_date_time.epoch }}
+        register: output
+
+      - debug:
+          var: output.dest  
+
