--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -54,4 +54,9 @@
         template:
           src: "{{ template }}"
           dest: ./inventory-osp-{{ ansible_date_time.epoch }}
+        register: output
+
+      - debug:
+          var: output.dest  
+
 
