--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -10,9 +10,9 @@
       OCP_MASTERS: ['master.ocpcloud.local']
       OCP_INFRA_NODES: ['infra1.ocpcloud.local', 'infra2.ocpcloud.local', 'infra3.ocpcloud.local']
       OCP_APP_NODES: 
-        - { host: 'appnode1.ocpcloud.local', region: 'dev' }
-        - { host: 'appnode2.ocpcloud.local', region: 'dev' }
-        - { host: 'appnode3.ocpcloud.local', region: 'test' }
+        - { host: 'appnode1.ocpcloud.local', region: 'dev', zone: 'a' }
+        - { host: 'appnode2.ocpcloud.local', region: 'dev', zone: 'b' }
+        - { host: 'appnode3.ocpcloud.local', region: 'test', zone: 'a' }
       LB: "no"
       OCP_LB_NODES: []
       #if you set CNS="yes" you need to specify 3 infra nodes and 3 app nodes above
