--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -33,7 +33,7 @@
       HTTP_PROXY: "no"
       OCP_HTTP_PROXY:
       OCP_HTTPS_PROXY: 
-      OCP_NO_PROXY: 169.254.169.254
+      OCP_NO_PROXY: "169.254.169.254,172.30.0.0/16,10.128.0.0/16"
 
       AWS: "no"
       
