--- a/ocp_node_setup.yml
+++ b/ocp_node_setup.yml
@@ -119,6 +119,7 @@
            content: |
             DEVS="/dev/{{ docker_storage }}"
             VG=docker-vg
+            WIPE_SIGNATURES=true
         tags: docker,docker_storage
  
       - name: 'Setup Docker storage'
