--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -17,7 +17,8 @@
       OCP_LB_NODES: []
       #if you set CNS="yes" you need to specify at least 3 infra nodes and 3 app nodes above
       CNS: "no"
-      
+      CNS_DEVICE: /dev/xvdc      
+ 
       OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
 
