--- a/ocp_inventory_template_osp.yml
+++ b/ocp_inventory_template_osp.yml
@@ -18,6 +18,7 @@
       #if you set CNS="yes" you need to specify 3 infra nodes and 3 app nodes above
       CNS: "no"
       CNS_DEVICE: /dev/xvdc       
+      CNS_VERSION: v3.9
  
       OCP_SSH_USER: cloud-user
       OCP_SSH_BECOME: true
