--- a/ocp_inventory_template.yml
+++ b/ocp_inventory_template.yml
@@ -37,6 +37,10 @@
       OCP_HTTPS_PROXY: 
       OCP_NO_PROXY: "172.30.0.0/16,10.0.0.0/8"
 
+      CUSTOM_REGISTRY: "no"
+      CUSTOM_REGISTRY_URL: "satellite.example.com:5000"
+      CUSTOM_REGISTRY_PREFIX: "organization-containers-ose"
+
       AWS: "no"
 
       OSP: "no"
