--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -37,6 +37,10 @@
       OCP_HTTPS_PROXY: ip-10-150-1-50.us-west-2.compute.internal:3128 
       OCP_NO_PROXY: ".us-west-2.compute.internal,169.254.169.254,172.30.0.0/16,10.0.0.0/8"
 
+      CUSTOM_REGISTRY: "no"
+      CUSTOM_REGISTRY_URL: "satellite.example.com:5000"
+      CUSTOM_REGISTRY_PREFIX: "organization-containers-ose"
+
       AWS: "yes"
       AWS_KEY: "{{ lookup('env','AWS_KEY') }}"
       AWS_SECRET: "{{ lookup('env','AWS_SECRET') }}"
