--- a/ocp_inventory_template_azure.yml
+++ b/ocp_inventory_template_azure.yml
@@ -46,7 +46,9 @@
       AWS: "no"
       
       OSP: "no"
-      
+    
+      VSPHERE: "no"
+        
     tasks:
       - name: Proces inventory template file
         template:
