--- a/ocp_node_setup.yml
+++ b/ocp_node_setup.yml
@@ -1,5 +1,5 @@
 ---
-  - name: Prepare RHEL servers to install Openshift Container Platform 3.9
+  - name: Prepare RHEL servers to install Openshift Container Platform 3.10
   
 # this playbook has following tags: register, install, docker
 
@@ -55,7 +55,7 @@
         tags: repos 
     
       - name: 'Enable required RHN repos'
-        command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.9-rpms --enable=rhel-7-fast-datapath-rpms --enable=rhel-7-server-ansible-2.4-rpms"
+        command: "subscription-manager repos --disable=* --enable=rhel-7-server-rpms --enable=rhel-7-server-extras-rpms --enable=rhel-7-server-ose-3.10-rpms --enable=rhel-7-fast-datapath-rpms --enable=rhel-7-server-ansible-2.4-rpms"
         tags: repos 
 
       - name: 'Yum install required packages'
@@ -68,6 +68,7 @@
            - git   
            - net-tools 
            - bind-utils 
+           - yum-utils
            - iptables-services 
            - bridge-utils 
            - bash-completion 
@@ -83,7 +84,7 @@
 
       - name: 'Yum install atomic openshift utils'
         yum: 
-           name: atomic-openshift-utils 
+           name: openshift-ansible 
            state: latest
         tags: install
 
