--- a/ocp_node_setup_with_vdo.yml
+++ b/ocp_node_setup_with_vdo.yml
@@ -1,7 +1,7 @@
 ---
   - name: Prepare RHEL servers to install Openshift Container Platform 3.10
   
-# this playbook has following tags: register, install, docker
+# this playbook has following tags: register, install, docker, vdo
 
     hosts: nodes
     become: true
@@ -118,7 +118,7 @@
         command: 'vdo create --name=vdo1 --device={{ docker_storage }} --vdoLogicalSize={{ docker_storage_size|int * 10 }}G'
         tags: vdo
 
-      - name: Create a volume group on top of /dev/sda1 with physical extent size = 32MB
+      - name: Create docker-vg volume group on top of {{ docker_storage }}
         lvg:
            vg: docker-vg
            pvs: /dev/mapper/vdo1
