--- a/ocp_local_setup.yml
+++ b/ocp_local_setup.yml
@@ -1,5 +1,5 @@
 ---
-  - name: Prepare RHEL servers to install Openshift Container Platform 3.9
+  - name: Prepare RHEL servers to install Openshift Container Platform 3.10
   
 # this playbook has following tags: register, install, docker
 
@@ -83,11 +83,11 @@
            state: latest
         tags: install  
 
-      - name: 'Yum install atomic openshift utils'
-        yum: 
-           name: atomic-openshift-utils 
-           state: latest
-        tags: install
+#      - name: 'Yum install openshift ansible'
+#        yum: 
+#           name: openshift-ansible
+#           state: latest
+#        tags: install
 
       - name: 'Enable CNS repo'
         when: (setup_cns == 'yes')
