--- a/ocp_local_setup_with_vdo.yml
+++ b/ocp_local_setup_with_vdo.yml
@@ -97,11 +97,11 @@
            state: latest
         tags: install  
 
-      - name: 'Yum install atomic openshift utils'
-        yum: 
-           name: atomic-openshift-utils 
-           state: latest
-        tags: install
+#      - name: 'Yum install atomic openshift utils'
+#        yum: 
+#           name: atomic-openshift-utils 
+#           state: latest
+#        tags: install
 
       - name: 'Enable CNS repo'
         when: (setup_cns == 'yes')
