--- a/ocp_node_setup_with_vdo.yml
+++ b/ocp_node_setup_with_vdo.yml
@@ -3,7 +3,7 @@
   
 # this playbook has following tags: register, install, docker, vdo
 
-    hosts: localhost
+    hosts: nodes
     become: true
     gather_facts: no
 
