--- a/ocp_inventory_template_aws.yml
+++ b/ocp_inventory_template_aws.yml
@@ -9,16 +9,13 @@
       
       OCP_MASTERS: ['ip-172-31-27-47.us-west-2.compute.internal']
       OCP_INFRA_NODES: ['ip-172-31-21-122.us-west-2.compute.internal', 'ip-172-31-25-163.us-west-2.compute.internal', 'ip-172-31-30-13.us-west-2.compute.internal']
-      OCP_APP_NODES: 
-        - { host: 'ip-172-31-26-194.us-west-2.compute.internal', region: 'dev', zone: 'a' }
-        - { host: 'ip-172-31-31-130.us-west-2.compute.internal', region: 'dev', zone: 'b' }
-        - { host: 'ip-172-31-24-228.us-west-2.compute.internal', region: 'test', zone: 'a' }
+      OCP_APP_NODES: ['ip-172-31-26-194.us-west-2.compute.internal', 'ip-172-31-31-130.us-west-2.compute.internal', 'ip-172-31-24-228.us-west-2.compute.internal']
       LB: "no"
       OCP_LB_NODES: []
       #if you set CNS="yes" you need to specify at least 3 infra nodes and 3 app nodes above
       CNS: "no"
       CNS_DEVICE: /dev/xvdc      
-      CNS_VERSION: v3.9
+      CNS_VERSION: v3.10
 
       OCP_SSH_USER: ec2-user
       OCP_SSH_BECOME: true
