--- a/ocp_node_setup_with_vdo_and_crio.yml
+++ b/ocp_node_setup_with_vdo_and_crio.yml
@@ -121,7 +121,7 @@
         tags: install
    
       - name: 'Create VDO device'
-        command: 'vdo create --name=vdo1 --device={{ docker_storage }} --vdoLogicalSize={{ docker_storage_size|int * 10 }}G'
+        command: 'vdo create --name=vdo1 --device={{ container_storage }} --vdoLogicalSize={{ container_storage_size|int * 10 }}G'
         tags: vdo
 
       - name: Create container-vg volume group on top of {{ container_storage }}
