--- a/ocp_node_setup_with_vdo_and_crio.yml
+++ b/ocp_node_setup_with_vdo_and_crio.yml
@@ -144,7 +144,7 @@
  
       - name: 'Setup container storage'
         command: container-storage-setup
-        tags: container
+        tags: container_storage
     
       - name: Get Kernel version
         shell: uname -r
