--- a/ocp_project_create_with_oc_cfme.yml
+++ b/ocp_project_create_with_oc_cfme.yml
@@ -1,5 +1,6 @@
 ---
   - name: Create Openshift Container Platform project
+    #ocp_client is machine where oc cli is installed
     hosts: ocp_client
     remote_user: root
     gather_facts: no
